[project]
name = "onc-animation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "cartopy>=0.25.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "rioxarray>=0.19.0",
]
